@@ -144,7 +144,8 @@ const pqxx::result::tuple pqxx::result::at(pqxx::result::size_type i) const
 }
 
 
-void pqxx::result::ThrowSQLError(const PGSTD::string &Err,
+void pqxx::result::ThrowSQLError(
+	const PGSTD::string &Err,
 	const PGSTD::string &Query) const
 {
 #if defined(PQXX_HAVE_PQRESULTERRORFIELD)
@@ -191,7 +192,8 @@ void pqxx::result::ThrowSQLError(const PGSTD::string &Err,
     {
     case '2':
       if (strcmp(code,"42501")==0) throw insufficient_privilege(Err, Query);
-      if (strcmp(code,"42601")==0) throw syntax_error(Err, Query);
+      if (strcmp(code,"42601")==0)
+        throw syntax_error(Err, Query, errorposition());
       if (strcmp(code,"42703")==0) throw undefined_column(Err, Query);
       if (strcmp(code,"42883")==0) throw undefined_function(Err, Query);
       if (strcmp(code,"42P01")==0) throw undefined_table(Err, Query);
