@@ -1,6 +1,7 @@
 3.2
  - Fixes problems with binary-string handling and escaping.
  - Fixes compatibility problems between 9.x libpq and 7.x backend.
+ - syntax_error reports error's approximate location in the query.
 3.1
  - Shared libraries are now versioned by ABI: 3.1 instead of 3.1.0 etc.
  - Threading behaviour is now documented, and can be queried.
