@@ -1,3 +1,6 @@
+2010-08-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/except.hxx, src/result.cxx:
+ - Include approximate location of error in syntax_error.
 2010-08-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
  configure.ac.in:
  - Fixed some breakage with 9.0 hex-escaping support detection.
